Changelog for Percona Toolkit

 * Fixed bug   PT-1914: Column data lost when 'Generated' is in the column comment
 * Fixed bug   PT-1919: pt-online-schema change drop_swap can lose triggers. (Thanks Bob)

v3.3.0 release 2021-01-14 

 * Fixed bug   PT-1857: pt-heartbeat cannot reconnect. 
 * Fixed bug   PT-169 : pt-online-schema-change FKs error handling.
 * Fixed bug   PT-1892: pt-summary says sshd not running
 * Fixed bug   PT-1881: pt-upgrade fails when query including format strings and SQL errors is given (Thanks Nayuta Yanagisawa)
 * Fixed bug   PT-1859: pt-pg-summary fails for Postgres12 (Thanks Sergey Kuzmichev)
 * Improvement PT-1853: Added --no-check-foreing-keys to pt-osc
 * Improvement PT-1851: Backslashes missing from documentation
 * Improvement PT-1836: Review and consider lintian reported issues
 * Fixed bug   PT-1829: pt-heartbeat doesn't reconnect for check-read-only
 * Fixed bug   PT-1822: pt-mongodb-summary fails on standalone mongodb instances
 * Fixed bug   PT-1518: pt-table-checksum gives error CRC32. (Thanks @ovidiustanila)

v3.2.0 release 2020-04-23 

 * Fixed bug   PT-1824: Name of a constraint can exceed 64 chars (Thanks Iwo Panowicz)
 * Fixed bug   PT-1793: Protocol parser cannot handle year 2020 (Thanks Kei Tsuchiya)
 * Fixed bug   PT-1782: pt-online-schema-change: FK keys warning, but there are no foreign keys
 * Fixed bug   PT-1773: pt-online-schema-change: Restrict the FK check if needed
 * Fixed bug   PT-1766: pt-table-checksum: DIFF_ROWS is not computed correctly
 * Improvement PT-1765: Documentation for pt-table-checksum's DIFF_ROWS
 * Fixed bug   PT-1760: pt-online-schema-change: regression on slave with replication channels
 * Fixed bug   PT-1759: pt-stalk not collecting processlist and variables
 * Improvement PT-1757: pt-table-checksum: Improvement on handling Small Tables
 * Improvement PT-1707: IPv6 support
 * Fixed bug   PT-1576: pt-stalk mysql-only not working as expected