@@ -1359,6 +1359,6 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-align 3.3.0
+pt-align 3.3.1
 
 =cut
