@@ -1648,6 +1648,6 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-fifo-split 3.3.0
+pt-fifo-split 3.3.1
 
 =cut
