@@ -2239,6 +2239,6 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-fingerprint 3.3.0
+pt-fingerprint 3.3.1
 
 =cut
