@@ -1127,7 +1127,7 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-ioprofile 3.3.0
+pt-ioprofile 3.3.1
 
 =cut
 
