@@ -3289,7 +3289,7 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-mysql-summary 3.3.0
+pt-mysql-summary 3.3.1
 
 =cut
 
