@@ -2613,6 +2613,6 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-show-grants 3.3.0
+pt-show-grants 3.3.1
 
 =cut
