@@ -1245,7 +1245,7 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-sift 3.3.0
+pt-sift 3.3.1
 
 =cut
 
