@@ -4523,6 +4523,6 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-slave-find 3.3.0
+pt-slave-find 3.3.1
 
 =cut
