@@ -2419,7 +2419,7 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-stalk 3.3.0
+pt-stalk 3.3.1
 
 =cut
 
