@@ -2723,7 +2723,7 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-summary 3.3.0
+pt-summary 3.3.1
 
 =cut
 
