@@ -8510,6 +8510,6 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-table-usage 3.3.0
+pt-table-usage 3.3.1
 
 =cut
