@@ -3303,6 +3303,6 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-pt-visual-explain 3.3.0
+pt-visual-explain 3.3.1
 
 =cut
