@@ -567,6 +567,6 @@ Place, Suite 330, Boston, MA  02111-1307  USA.
 
 =head1 VERSION
 
-Percona Toolkit v3.3.0 released 2021-01-13
+Percona Toolkit v3.3.1 released 2021-04-22
 
 =cut
