@@ -56,7 +56,7 @@ const (
 var (
 	Build     string = "2020-04-23"
 	GoVersion string = "1.14.1"
-	Version   string = "3.2.0"
+	Version   string = "3.3.1"
 	Commit    string
 
 	defaultConnectionTimeout = 3 * time.Second
