@@ -1,7 +1,9 @@
 Changelog for Percona Toolkit
 
+ * Fixed bug   PT-716 : pt-summary reports wrong memory size
  * Fixed bug   PT-1914: Column data lost when 'Generated' is in the column comment
  * Fixed bug   PT-1919: pt-online-schema change drop_swap can lose triggers. (Thanks Bob)
+ * Fixed bug   PT-1943:	BEFORE triggers are dropped after pt-online-schema-change run
 
 v3.3.0 release 2021-01-14 
 
